# pokeys-and-shrews

./: .gitignore  CMakeLists.txt  README.md
assets/: Hero1.kra  bank.kra  damage_trap.kra  eduardo.kra  frame.kra  frame_aztec.kra  frame_small.kra  panel.kra  research_counter.kra  stun_trap.kra  teleport_trap.kra  tile_fortified.kra  ui_empty.kra
docs/: Pokeys+Shrews_UML.vpp
res/: Tiles.kra  map.txt
src/: Task.cpp  Task.h  main.cpp  test.cpp  test.h
src/app/: Game.cpp  Game.h  GameTest.cpp  GameTest.h  SmartContractDemo.cpp  SmartContractDemo.h
src/bank/: Bank.h
src/contract/: ContractState.h  SmartContract.cpp  SmartContract.h  SmartContractDemo.cpp  SmartContractDemo.h
src/contract/state/: Accepted.cpp  Accepted.h  Completed.cpp  Completed.h  Negotiate.cpp  Negotiate.h  Rejected.cpp  Rejected.h  TentativelyAccepted.cpp  TentativelyAccepted.h
src/core/: Engine.cpp  Engine.h  EventLoop.cpp  EventLoop.h  GameObject.h  Graphic.h  ResourceManager.cpp  ResourceManager.h  Resources.cpp  Resources.h  Storyteller.cpp  Storyteller.h  Timer.h  UserInterface.cpp  UserInterface.h
src/debug/: LabelResearch.cpp  LabelResearch.h  LairExplorerGraphic.cpp  LairExplorerGraphic.h
src/editor/: EntityEditor.cpp  EntityEditor.h  LairEditor.cpp  LairEditor.h  ResearchManager.cpp  ResearchManager.h  TrapSelector.cpp  TrapSelector.h
src/entity/: Bank.cpp  Bank.h  DamageTrap.h  StunTrap.h  TeleportTrap.h  TileEntity.h
src/graphics/: BankGraphic.cpp  BankGraphic.h  HeroGraphic.cpp  HeroGraphic.h  LairExplorerGraphic.cpp  LairExplorerGraphic.h  LairGraphic.cpp  LairGraphic.h  TextGraphic.cpp  TextGraphic.h  TileGraphic.cpp  TileGraphic.h
src/graphics/research/: TrapResearchGraphic.cpp  TrapResearchGraphic.h
src/graphics/trap/: DamageTrapGraphic.cpp  DamageTrapGraphic.h  StunTrapGraphic.cpp  StunTrapGraphic.h  TeleportTrapGraphic.cpp  TeleportTrapGraphic.h
src/hero/: Hero.cpp  Hero.h
src/lair/: BreadthFirstExplorer.cpp  BreadthFirstExplorer.h  DepthFirstExplorer.cpp  DepthFirstExplorer.h  Lair.cpp  Lair.h  LairExplorer.h  Tile.cpp  Tile.h
src/render/: Drawable.h  Frame.cpp  Frame.h
src/research/: ResearchItem.cpp  ResearchItem.h  ResearchLab.cpp  ResearchLab.h  ResearchTask.cpp  ResearchTask.h  TrapResearch.cpp  TrapResearch.h
src/trap/: DamageTrap.h  Trap.h
src/ui/: Button.cpp  Button.h  Label.cpp  Label.h
src/util/: out.cpp  out.h  util.cpp  util.h
